# fake_mica

./: .gitignore  Cargo.toml
examples/blur_my_wallpaper/: Cargo.toml
examples/blur_my_wallpaper/src/: main.rs
examples/vizia_mica/: Cargo.toml
examples/vizia_mica/src/: main.rs
src/: blur.rs  colors.rs  kmeans_perlin.rs  lib.rs  main.rs
